2005-11-18  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed board naming for the spip script
	- Improved gtans big rotation
	- Improved memory sound background to avoid confusion.
	- Added Screenshots
	
	* boards/algebra_group.xml.in:
	* boards/algebramenu.xml.in:
	* boards/colors_group.xml.in:
	* boards/gnumchmenu.xml.in:
	* boards/images/transparent_square2.png:
	* boards/mazeMenu.xml.in:
	* docs/gcompris2spip.pl:
	* docs/website/footer.html:
	* docs/website/meta.html:
	* src/boards/gtans_interface.c: (create_mainwindow):
	* src/boards/memory.c: (create_item):
	* src/boards/money.c: (money_next_level):

2005-11-17  Yves Combe  <yves@ycombe.net>

	add uppercase only configuration option in click_on_letter.

	* src/boards/click_on_letter.c: (start_board), (end_board),
	(click_on_letter_create_item), (config_start):

2005-11-17  Yves Combe  <yves@ycombe.net>

	Fix xml i18n bug.

	* src/gcompris/gameutil.c: (reactivate_newline),
	(gcompris_add_xml_to_data):

2005-11-16  Yves Combe  <yves@ycombe.net>

	add uppercase only configuration option in gletter.

	* src/boards/gletters.c: (load_default_charset), (start_board),
	(key_press), (gletter_config_start):

2005-11-15  Yves Combe  <yves@ycombe.net>

	Fix segfaults in python callback and memory.
        Cause is sound finished after board quit.

	* src/boards/memory.c: (end_board), (memory_next_level),
	(start_callback):
	* src/boards/py-mod-sound.c: (pyGcomprisSoundCallback):

2005-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Created the gtans icon based on an www.openclipart.org design reviewed by
	Bruno Coudoin and placed under GPL.

	* boards/boardicons/gtans.png:
	* boards/gtans.xml.in:
	* src/gcompris/timer.c: (gcompris_timer_pause): removed printout.

2005-11-14  Yves Combe,,,  <yves@ycombe.net>

	clean tangram code from debug.
	add rotation buttons in tangram.

	* src/boards/gtans.c: (start_board), (tanspinsetvalmax),
	(tandrawselect), (tanredrawpetite), (tanloadfigtab),